--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,26 @@
+.DS_Store
+node_modules
+
 *.sketch
 *.fig
 *.xd
 .prettierignore
 
-.DS_Store
-node_modules
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
